2002-01-16  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02840]
	* scripts/w3mmail.cgi.in: use LOCAL_COOKIE
	* scripts/w3mmail.cgi.in: no need HTTP response header
	* scripts/w3mmail.cgi.in: fix typo $nkf_NKF
	* scripts/w3mmail.cgi.in: eval { use NKF; } is perl5ism
	* scripts/multipart/multipart.cgi.in: ditto

2002-01-16  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02835]
	* rc.c: move label_topline, nextpage_topline from param3 to param1
		param7 is SSL Setting

2002-01-15  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02834] mailto: use external program
	* NEWS: use w3mmail.cgi for mailto: URL
	* configure: add use_w3mmailer
	* frame.c (createFrameFile): ifndef USE_W3MMAILER
	* main.c (followA): ifndef USE_W3MMAILER
	* main.c (cmd_loadURL): ifndef USE_W3MMAILER
	* url.c (schemetable): ifndef USE_W3MMAILER, mailto: become SCM_UNKNOWN
	* url.c (parseURL2): ifndef USE_W3MMAILER
	* url.c (_parsedURL2Str): ifndef USE_W3MMAILER
	* url.c (default_urimethods): added
	* url.c (searchURIMethods): check default_urimethods
	* scripts/Makefile: add w3mmail.cgi
	* scritps/w3mmail.cgi.in: added
	* scripts/.cvsignore: ignore w3mmail.cgi

2002-01-15  Fumitoshi UKAI  <ukai@debian.or.jp>

	* file.c (loadGeneralFile): return NULL, not NO_BUFFER

2002-01-15  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02833] ssl_forbid_method in SSL Setting
	* rc.c (params7): ssl_forbid_method moved here
	* rc.c (params8): ssl_forbid_method removed here
	* rc.c (sections): params7 ifdef USE_SSL

2002-01-15  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02832] external URI loader support
	* NEWS: support external URI loader
	* config.h.dist (USE_EXTERNAL_URI_LOADER): added
	* config.h.dist (USER_URIMETHODMAP): added
	* config.h.dist (SYS_URIMETHODMAP): added
	* configure: ask use_external_uri_loader
	* file.c (loadGeneralFile): return NO_BUFFER, not NULL
	* file.c (loadGeneralFile): add SCM_UNKNOWN for USE_EXTERNAL_URI_LOADER
	* fm.h (urimethodmap_files): added